# alt_test_task

./: .gitignore  CMakeLists.txt  README.md  main.c  task
ext/: CMakeLists.txt
lib/: CMakeLists.txt  common.h  diff_branch_pack.c  diff_branch_pack.h
pack/: CMakeLists.txt
tests/: CMakeLists.txt  test_01.c  test_diff.c  test_download_json.c  test_print_json.c
